<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/_15sdp"
            android:paddingTop="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp">

            <com.common.view.CMTextView
                style="@style/txt_000_22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_15sdp">

                <com.common.view.CTextView
                    android:id="@+id/tvMale"
                    style="@style/txt_666_14"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/_4sdp"
                    android:paddingBottom="@dimen/_4sdp"
                    android:background="@drawable/btn_kg_lb_selector_radius_5"
                    android:gravity="center"
                    android:text="@string/male" />

                <com.common.view.CTextView
                    android:id="@+id/tvFemale"
                    style="@style/txt_666_14"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/_4sdp"
                    android:paddingBottom="@dimen/_4sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:background="@drawable/btn_kg_lb_selector_radius_5"
                    android:gravity="center"
                    android:text="@string/female" />

            </LinearLayout>

            <com.common.view.CMTextView
                style="@style/txt_000_22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:text="@string/year_of_birth" />

            <include
                layout="@layout/dialog_dob"
                android:id="@+id/dobPicker"/>

        </LinearLayout>

    </LinearLayout>

</layout>