<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:padding="@dimen/_20sdp"
    android:gravity="center"
    android:layout_marginBottom="15dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <com.common.view.CTextView
            android:id="@+id/dialogtitle"
            style="@style/txt_fff_18"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/app_name" />

    </LinearLayout>

    <EditText
        android:id="@+id/editSearch"
        style="@style/txt_333_14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/squere_edittext"
        android:hint="@string/search"
        android:padding="12dp"
        android:singleLine="true"
        android:textCursorDrawable="@null" />

    <com.common.view.CTextView
        style="@style/txt_fff_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:text="@string/clear"
        android:visibility="gone" />


    <ListView
        android:id="@+id/lvSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:cacheColorHint="@android:color/transparent"
        android:divider="@color/list_devider"
        android:dividerHeight="1px"
        android:fadingEdge="none"
        android:fastScrollAlwaysVisible="false"
        android:fastScrollEnabled="true"
        android:listSelector="@drawable/list_selector"
        android:overScrollMode="never"
        android:scrollbars="none"
        tools:listitem="@layout/spinner_item" />

</LinearLayout>