<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="isLoading"
            type="java.lang.Boolean" />

    </data>


    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        app:behavior_hideable="false"
        app:behavior_peekHeight="90dp"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <View
            android:id="@+id/peekView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_top_corner_radius"
            android:paddingBottom="@dimen/_20sdp"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_15sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close"
                android:layout_gravity="end"
                android:tint="@color/col_666"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"/>

            <com.common.view.CBTextView
                style="@style/txt_000_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restart" />

            <com.common.view.CTextView
                style="@style/txt_666_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/restart_day_confirmation_msg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp25"
                android:paddingHorizontal="@dimen/_15sdp"
                android:paddingVertical="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="1">

                    <com.common.view.CBButtonView
                        android:id="@+id/btnCancel"
                        style="@style/txt_000_18"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/btn_height"
                        android:background="@drawable/btn_bg_round_border_gray"
                        android:text="@string/cancel"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1">

                    <com.common.view.CBButtonView
                        android:id="@+id/btnOk"
                        style="@style/txt_fff_18"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/btn_height"
                        android:background="@drawable/btn_bg_round_grediant"
                        android:text="@string/btn_ok"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>