<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/gray_light_____"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_150sdp"
                        android:src="@drawable/bg_exit_dialog"
                        android:scaleType="centerCrop"
                        />


                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imgClose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:padding="@dimen/_10sdp"
                        android:src="@drawable/wp_ic_info_close" />

                </FrameLayout>
                    
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingVertical="@dimen/_15sdp"
                        android:paddingStart="@dimen/_15sdp"
                        android:paddingEnd="@dimen/_15sdp">


                        <com.common.view.CBTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/txt_000_20"
                            android:gravity="center"
                            android:textAllCaps="true"
                            android:text="@string/quite_exercise_msg"/>

                        <com.common.view.CBButtonView
                            android:id="@+id/btnQuit"
                            style="@style/txt_theme_18"
                            android:layout_width="@dimen/_150sdp"
                            android:layout_height="@dimen/btn_height"
                            android:layout_marginTop="@dimen/_30sdp"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:background="@drawable/btn_bg_round_border_theme"
                            android:text="@string/quit" />

                        <com.common.view.CBButtonView
                            android:id="@+id/btnContinue"
                            style="@style/txt_fff_18"
                            android:layout_width="@dimen/_150sdp"
                            android:layout_height="@dimen/btn_height"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:background="@drawable/btn_bg_round_theme"
                            android:text="@string/str_continue" />

                        <com.common.view.CMTextView
                            android:id="@+id/tvComeback"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAllCaps="true"
                            style="@style/txt_theme_16"
                            android:padding="@dimen/_10sdp"
                            android:visibility="gone"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="@string/come_back_in_30_minute" />

                    </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>

</layout>