<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.github.jhonnyx2012.horizontalpicker.HorizontalPicker
            android:id="@+id/dtpWeightSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_light_" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/_15sdp"
            android:paddingTop="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp">

            <com.common.view.CMTextView
                style="@style/txt_000_22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <com.common.view.CEditTextView
                    android:id="@+id/editWeight"
                    style="@style/txt_333_16"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="0.0 KG"
                    android:inputType="numberDecimal"
                    android:maxLength="7"
                    android:maxLines="1"
                    android:singleLine="true" />


                <com.common.view.CTextView
                    android:id="@+id/tvKG"
                    style="@style/txt_666_14"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:background="@drawable/btn_kg_lb_selector_radius_5"
                    android:textColor="@drawable/btn_kg_lb_txt_color_selector"
                    android:gravity="center"
                    android:text="@string/kg" />

                <com.common.view.CTextView
                    android:id="@+id/tvLB"
                    style="@style/txt_666_14"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:background="@drawable/btn_kg_lb_selector_radius_5"
                    android:textColor="@drawable/btn_kg_lb_txt_color_selector"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/lb" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>